[package]
name = "conana"
version = "0.1.0"
authors = ["Phodal Huang <h@phodal.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid = { git = "https://github.com/linebender/druid.git"}
druid-shell = { git = "https://github.com/linebender/druid.git"}

piet-common = { version = "=0.4.1", features = ["png"] }

log = "0.4.8"
tracing-subscriber = "0.2.17"

# mime type
infer = "0.3"

# unicode count size
unicode-segmentation = "1.7.1"
crossbeam-channel = "0.4.0"
notify = { version = "5.0.0-pre.7"}

regex = "1.0"

serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"

# save config
dirs = "3.0"

pulldown-cmark = { version = "0.8", default-features = false }
